Bikin view formulir order dan konfirmasi order

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,6 @@
     <title>LOOKal</title>
 </head>
 <body>
-
     <% tourServices.forEach(function(tourService){ %>
         <div>
             <h2><%= tourService.name %></h2>
@@ -21,6 +20,35 @@
         <h3><%= tourService.childrenTicketPrice %></h3>
 
     <% }); %>
-    
-</body>
+    <style>
+        body {
+          margin: 0;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        .topnav {
+          overflow: hidden;
+          background-color: #333;
+        }
+        
+        .topnav a {
+          float: right;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+        }
+        
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
+        
+        .topnav a.active {
+          background-color: #4CAF50;
+          color: white;
+        }
+        </style>    
+    </body>
 </html>
