--- a/views/lacak.html
+++ b/views/lacak.html
@@ -5,18 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <title>Lacak Tiket</title>
 </head>
 
 <body>
-
     <!-- Navbar -->
-    Lacak Tiket
+    <h1>Lacak Tiket</h1>
     <br>
     <br>
-    <div class="topnav">
-        <input type="text" placeholder="Masukkan kode tiket">
+    <div style="width:800px;">
+        <div style="width:300px; float:left;">
+            <form action="/orders/lacak" method=POST>
+                <input type="text" id="orderQuery" name="orderQuery" placeholder="Masukkan kode tiket">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div style="width:300px; float:right;">
+
+
+
+            }
+        </div>
     </div>
+    <div style="clear: both;"></div>
 
 </body>
 
