--- a/views/lacak.html
+++ b/views/lacak.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="LOOKal\public\css\index.css">
     <title>Lacak Tiket</title>
 </head>
 
@@ -19,15 +20,41 @@
                 <input type="text" id="orderQuery" name="orderQuery" placeholder="Masukkan kode tiket">
                 <input type="submit" value="Submit">
             </form>
+            <p>
+            </p>
         </div>
         <div style="width:300px; float:right;">
+            <h2>No Tiket</h2>
+            <h2>
+                <!-- no tiket -->
+            </h2>
+            <br>
 
-
-
-            }
+            <div style="width:80px; float:left;">
+                Nama<br><br> Layanan
+                <br><br> Paket
+                <br><br> Jumlah
+                <br><br> Harga
+                <br><br> Provider
+                <br><br> Lokasi
+                <br><br> Masa Berlaku<br><br>
+            </div>
+            <div style="width:220px; float:right;">
+                kkk
+            </div>
         </div>
     </div>
     <div style="clear: both;"></div>
+    <style>
+        html {
+            font-family: "Source Sans Pro";
+        }
+        
+        h1,
+        h2 {
+            font-style: "Semibold";
+        }
+    </style>
 
 </body>
 
