--- a/views/lacak.html
+++ b/views/lacak.html
@@ -30,11 +30,11 @@
                     <p style="color:#C00246; font-size:10px">
                         Kode yang dimasukkan salah! Coba ulangi lagi.
                     </p>
-                    <% } else if (order.id == -999){ %>
+                    <% } else if (order._id.$oid == -999){ %>
                         <!-- <p>baru awal</p> -->
                         <%} else { %>
                             <p>
-                                <%= order.id %>
+                                <%= order._id.$oid %>
                                     Ubah lagi nanti
                             </p>
                             <% } %>
@@ -56,7 +56,7 @@
                     <br><br> Masa Berlaku<br><br>
                 </div>
                 <div style="width:220px; float:right;">
-                    <% if (order == null || order.id == -999 ) { %>
+                    <% if (order == null || order._id.$oid == -999 ) { %>
                         <!-- nanti apus aja -->
                         undefined<br><br> undefined
                         <br><br> undefined
@@ -69,7 +69,7 @@
 
                         <%} else { %>
                             <p>
-                                <%= order.id %>
+                                <%= order._id.$oid %>
                                     Ada
                             </p>
                             <% } %>
