--- a/views/sekitarkita.html
+++ b/views/sekitarkita.html
@@ -16,13 +16,17 @@
 <body>
     <div class="container">
         <h1>Sekitar Kita</h1>
-        <div style="width:800px;">
-            <div style="width:300px; float:left;">
+        <div style="width:1000px;">
+            <div style="width:600px; float:left;">
                 <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=500&amp;height=500&amp;hl=en&amp;q=Baturaden%20+(Sekitar%20Kita)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                 <a href='https://www.embedmap.net/'>how to embed a google map into a website</a>
                 <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=9df3c73719ce50bbd2bfafad3da01380a2e7b7af'></script>
             </div>
-            <div style="width:300px; float:right;">
+            <div style="width:400px; float:right;">
+                <h3>
+                    Tempat Layanan Wisata Sekitar Anda
+
+                </h3>
             </div>
 
         </div>
