layanan anda solved

--- a/views/layanananda.html
+++ b/views/layanananda.html
@@ -5,36 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOOKal</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="LOOKal\public\css\index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <title>Layanan Anda</title>
 </head>
 
 <body>
+    <div class="container">
+        <h1 style="font-size:60px; margin-top:20px; margin-bottom:20px" }>Layanan Anda</h1>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>name</th>
+                        <th>location</th>
+                        <th>ticketPrice</th>
+                        <th>description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <script>
+                        let data = [
 
-
-    <% tourServices.forEach(function(tourService){ %>
-        <div>
-            <h2>
-                <%= tourService.name %>
-            </h2>
+                            {
+                                id: 1,
+                                name: "bob"
+                            }, {
+                                id: 2,
+                                name: "bob2"
+                            }, {
+                                id: 3,
+                                name: "bob3"
+                            },
+                        ]
+                    </script>
+                    <% tourServices.forEach(function(tourService){ %>
+                        <tr>
+                            <td>
+                                <%= tourService._id %>
+                            </td>
+                            <td>
+                                <%= tourService.name %>
+                            </td>
+                            <td>
+                                <%= tourService.location %>
+                            </td>
+                            <td>
+                                <%= tourService.ticketPrice %>
+                            </td>
+                            <td>
+                                <%= tourService.description.substring(0, 50).concat("...") %>
+                            </td>
+                        </tr>
+                        <% }); %>
+                </tbody>
+            </table>
         </div>
-
-        <img src=<%=tourService.imageURL%>>
-
-        <h3>
-            <%= tourService.description %>
-        </h3>
-        <h3>
-            <%= tourService.location %>
-        </h3>
-        <h3>
-            <%= tourService.adultTicketPrice %>
-        </h3>
-        <h3>
-            <%= tourService.childrenTicketPrice %>
-        </h3>
-
-        <% }); %>
-
 </body>
 
 </html>
