--- a/views/sekitarkita.html
+++ b/views/sekitarkita.html
@@ -10,40 +10,42 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <title>Sekitar Kita</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Sekitar Kita</h1>
-        <div style="width:1000px;">
-            <div style="width:600px; float:left;">
-                <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=500&amp;height=500&amp;hl=en&amp;q=Baturaden%20+(Sekitar%20Kita)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-                <a href='https://www.embedmap.net/'>how to embed a google map into a website</a>
-                <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=9df3c73719ce50bbd2bfafad3da01380a2e7b7af'></script>
-            </div>
-            <div style="width:400px; float:right;">
-                <h3>
-                    Tempat Layanan Wisata Sekitar Anda
+        <div class="row">
+            <h1>Sekitar Kita</h1>
+            <div style="width:1000px;">
+                <div style="width:600px; float:left;" class="col-sm-6">
+                    <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=500&amp;height=500&amp;hl=en&amp;q=Baturaden%20+(Sekitar%20Kita)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                    <a href='https://www.embedmap.net/'>how to embed a google map into a website</a>
+                    <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=9df3c73719ce50bbd2bfafad3da01380a2e7b7af'></script>
+                </div>
+                <div style="width:400px; float:right;" class="col-sm-6">
+                    <h3>
+                        Tempat Layanan Wisata Sekitar Anda
 
-                </h3>
-            </div>
+                    </h3>
+                </div>
 
+            </div>
+            <div style="clear: both;"></div>
+            <style>
+                html {
+                    font-family: "Source Sans Pro";
+                }
+                
+                h1,
+                h2 {
+                    font-style: "Semibold";
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                }
+            </style>
         </div>
-        <div style="clear: both;"></div>
-        <style>
-            html {
-                font-family: "Source Sans Pro";
-            }
-            
-            h1,
-            h2 {
-                font-style: "Semibold";
-                margin-top: 10px;
-                margin-bottom: 10px;
-            }
-        </style>
-
     </div>
 
 </body>
