--- a/views/konfirmasiOrder.html
+++ b/views/konfirmasiOrder.html
@@ -11,3 +11,7 @@
     <h5>Terima kasih, <%=newOrder.consumerName%>, pesanan Anda sudah kami terima dengan baik. Silakan lakukan pembayaran sebanyak <%=newOrder.totalPrice%> ke rekening <%=newOrder.paymentMethod>.</h5>
     <h5>Nomor tiket Anda adalah <%=newOrder._id%></h5>
 </body>
+
+<styles>
+    
+</styles>
