--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
             <%= tourService.adultTicketPrice %>
         </h3>
         <h3>
-            <%= tourService.childrenTicketPrice %>
+            <%= tourService.ticketPrice %>
         </h3>
 
         <% }); %>
