--- a/views/detailTourService.html
+++ b/views/detailTourService.html
@@ -7,6 +7,13 @@
     <title><%= tourService.name %></title>
 </head>
 <body>
-    
+    <h5>Nama: <%= tourService.name %></h5>
+    <img src=<%=tourService.imageURL %> style="width:10%;height:10%;">
+    <h5>Deskripsi: <%= tourService.description %></h5>
+    <h5>Location: <%= tourService.location %></h5>
+    <h5>Harga: <%= tourService.ticketPrice %></h5>
+    <h5>Unit: <%= tourService.unit %></h5>
+    <h5>Tiket: <%= tourService.type %></h5>
+    <a href="/services/<%= tourService._id%>/order" class="btn btn-primary">Pesan Sekarang!</a>
 </body>
 </html>
