--- a/views/home.html
+++ b/views/home.html
@@ -1,181 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>LOOKal</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <title>LOOKal</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 
 <body style="height:1500px; background: #f2f2f2;
 font-family: 'Open Sans', sans-serif">
+    <!-- <div w3-include-html="navbar.html"></div>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/" style="font-family: suravaram;">LOOKal</a>
+    <script>
+        includeHTML();
+    </script> -->
+    <div id="navbar">
+
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Beranda</a></li>
-      <li><a href="/lacak">Lacak Tiket</a></li>
-      <li><a href="/sekitarkita">Sekitar Kita</a></li>
-      <li><a href="/layanananda">(Owner) Layanan Anda</a></li>
-      <li><a href="/orders">(Owner) Cek seluruh Order</a></li>
-    </ul>
-  </div>
-</nav>
-  
-<div class="container" style="margin-top:50px">
-  <h3 style="text-align: center;">Mulai Petualanganmu Sekarang!</h3>
-  <h5 style="text-align: center">Indonesia kaya akan wisata alamnya</h5>
-  <h5 style="text-align: center">Jelajahi wisata lokal hingga ke pedalaman</h5>
-</div>
+
+    <script type="text/javascript">
+        console.log("apasih yg eror");
+        $(function() {
+            $("#navbar").load("navbar.html");
+        });
+    </script>
 
 
-<div class="container1">
-  <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wpp2?ver=2d13" style="width:100%;">
-  <div class="content">
-    <h1>Dapatkan Potongan Harga untuk berwisata di daerah Sidorejo, Pangandaran, dan masih banyak lagi!</h1>
-  </div>
-</div>
-
-<div class="container3">
-  <div class="container" style="margin-top:50px; margin: left 50px">
-    <h3>Rekomendasi Wisata</h3>
-    <div class="row">
-      <% tourServices.forEach(function(tourService){ %>
-        <div class="col-md-4" style="margin-bottom: 50px;"> 
-            <div class="card" style="width:300px; border:black">
-              <img class="card-img-top" src="<%=tourService.imageURL %>" alt="Card image" style="width:100%">
-              <div class="card-body">
-                <h4 class="card-title"><%=tourService.name%></h4>
-                <h5>Harga: <%=tourService.ticketPrice %> / <%=tourService.unit %></h5>
-                <a href="/services/<%= tourService._id %>" class="btn btn-primary">Lihat Detail</a>
-              </div>
+    <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/" style="font-family: suravaram;">LOOKal</a>
             </div>
-          </div>
-        <% }); %>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Beranda</a></li>
+                <li><a href="/lacak">Lacak Tiket</a></li>
+                <li><a href="/sekitarkita">Sekitar Kita</a></li>
+                <li><a href="/layanananda">(Owner) Layanan Anda</a></li>
+                <li><a href="/orders">(Owner) Cek seluruh Order</a></li>
+            </ul>
+        </div>
+    </nav> -->
+
+    <div class="container" style="margin-top:50px">
+        <h3 style="text-align: center;">Mulai Petualanganmu Sekarang!</h3>
+        <h5 style="text-align: center">Indonesia kaya akan wisata alamnya</h5>
+        <h5 style="text-align: center">Jelajahi wisata lokal hingga ke pedalaman</h5>
     </div>
-  </div>
-</div>
+
+
+    <div class="container1">
+        <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wpp2?ver=2d13" style="width:100%;">
+        <div class="content">
+            <h1>Dapatkan Potongan Harga untuk berwisata di daerah Sidorejo, Pangandaran, dan masih banyak lagi!</h1>
+        </div>
+    </div>
+
+    <div class="container3">
+        <div class="container" style="margin-top:50px; margin: left 50px">
+            <h3>Rekomendasi Wisata</h3>
+            <div class="row">
+                <% tourServices.forEach(function(tourService){ %>
+                    <div class="col-md-4" style="margin-bottom: 50px;">
+                        <div class="card" style="width:300px; border:black">
+                            <img class="card-img-top" src="<%=tourService.imageURL %>" alt="Card image" style="width:100%">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <%=tourService.name%>
+                                </h4>
+                                <h5>Harga:
+                                    <%=tourService.ticketPrice %> /
+                                        <%=tourService.unit %>
+                                </h5>
+                                <a href="/services/<%= tourService._id %>" class="btn btn-primary">Lihat Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                    <% }); %>
+            </div>
+        </div>
+    </div>
 
 
 
-<div class="wrap">
-  <!-- <div class="search"> -->
-    <form class="search" action="/services/search" method="POST">
-     <input type="text" class="searchKey" placeholder="What are you looking for?" name="searchKey">
-     <button type="submit" class="searchButton">
+    <div class="wrap">
+        <!-- <div class="search"> -->
+        <form class="search" action="/services/search" method="POST">
+            <input type="text" class="searchKey" placeholder="What are you looking for?" name="searchKey">
+            <button type="submit" class="searchButton">
        <i class="fa fa-search"></i>
     </button>
-    </form>
-  <!-- </div> -->
-</div>
+        </form>
+        <!-- </div> -->
+    </div>
 
 
-<style>
-  
-  .judul {
-      margin-top:100px;
-  }
-  
-  .search {
-    width: 100%;
-    position: relative;
-    display: flex;
-  }
-  
-  .searchTerm {
-    width: 100%;
-    border: 3px solid #00B4CC;
-    border-right: none;
-    padding: 5px;
-    height: 36px;
-    border-radius: 5px 0 0 5px;
-    outline: none;
-    color: #9DBFAF;
-  }
-  
-  .searchTerm:focus {
-    color: #00B4CC;
-  }
-  
-  .searchButton {
-    width: 40px;
-    height: 36px;
-    border: 1px solid #00B4CC;
-    background: #00B4CC;
-    text-align: center;
-    color: #fff;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
-  /*Resize the wrap to see the search bar change!*/
-  .wrap {
-    width: 30%;
-    position: absolute;
-    top: 200px;
-    left: 50%;
-    transform: translate(-25%, -25%);
-  }
-  
-  .backdrop-beranda{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wpp2?ver=2d13");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .text-beranda{
-      height:40px;
-      text-align: center;
-  }
-  
-  .centered {
-    position: absolute;
-    top: 117%;
-    text-align: center;
-  }
-  
-  .container1 {
-    width: 100%;
-    position: absolute;
-    margin-top: 100px;
-    text-align: center;
-    color:black;
-  }
-
-  .container3 {
-    width: 100%;
-    position: absolute;
-    margin-top: 1000px;
-    text-align: center;
-    color:black;
-  }
-
-  .container1 .content {
-  position: absolute; /* Position the background text */
-  bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-  color: #f1f1f1; /* Grey text */
-  width: 100%; /* Full width */
-  padding: 20px; /* Some padding */
-  }
-  </style>
+    <style>
+        .judul {
+            margin-top: 100px;
+        }
+        
+        .search {
+            width: 100%;
+            position: relative;
+            display: flex;
+        }
+        
+        .searchTerm {
+            width: 100%;
+            border: 3px solid #00B4CC;
+            border-right: none;
+            padding: 5px;
+            height: 36px;
+            border-radius: 5px 0 0 5px;
+            outline: none;
+            color: #9DBFAF;
+        }
+        
+        .searchTerm:focus {
+            color: #00B4CC;
+        }
+        
+        .searchButton {
+            width: 40px;
+            height: 36px;
+            border: 1px solid #00B4CC;
+            background: #00B4CC;
+            text-align: center;
+            color: #fff;
+            border-radius: 0 5px 5px 0;
+            cursor: pointer;
+            font-size: 20px;
+        }
+        /*Resize the wrap to see the search bar change!*/
+        
+        .wrap {
+            width: 30%;
+            position: absolute;
+            top: 200px;
+            left: 50%;
+            transform: translate(-25%, -25%);
+        }
+        
+        .backdrop-beranda {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wpp2?ver=2d13");
+            height: 50%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+        
+        .text-beranda {
+            height: 40px;
+            text-align: center;
+        }
+        
+        .centered {
+            position: absolute;
+            top: 117%;
+            text-align: center;
+        }
+        
+        .container1 {
+            width: 100%;
+            position: absolute;
+            margin-top: 100px;
+            text-align: center;
+            color: black;
+        }
+        
+        .container3 {
+            width: 100%;
+            position: absolute;
+            margin-top: 1000px;
+            text-align: center;
+            color: black;
+        }
+        
+        .container1 .content {
+            position: absolute;
+            /* Position the background text */
+            bottom: 0;
+            /* At the bottom. Use top:0 to append it to the top */
+            background: rgb(0, 0, 0);
+            /* Fallback color */
+            background: rgba(0, 0, 0, 0.5);
+            /* Black background with 0.5 opacity */
+            color: #f1f1f1;
+            /* Grey text */
+            width: 100%;
+            /* Full width */
+            padding: 20px;
+            /* Some padding */
+        }
+    </style>
 
 </body>
+
 </html>
